--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -44,11 +44,13 @@
         <div class="row">
           <div class="col-12"><h1>Pokedex</h1></div>
             <div class="col-6 lista-nomi">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, deleniti. Illo, quibusdam et maiores quasi incidunt nihil consectetur rem natus, nemo ipsa, itaque optio? Omnis commodi quasi voluptatibus deserunt magnam.</p>
+               <h2>Nomi</h2>
             </div>
             <div class="col-6 info">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, deleniti. Illo, quibusdam et maiores quasi
-                incidunt nihil consectetur rem natus, nemo ipsa, itaque optio? Omnis commodi quasi voluptatibus deserunt magnam.</p>
+             <h2>Statistiche</h2>
+            <img id="pokemon-img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png">
+            <p id="pokemon-type"></p>
+            <p id="pokemon-desc"></p>
             </div>
         </div>
     </div>
