--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -42,13 +42,15 @@
   
     <div class="container pokedex mt-5">
         <div class="row">
-          <div class="col-12"><h1>Pokedex</h1></div>
+          <div class="col-12"><h1>Pokedex</h1>
+          <p class="p-2">Clicca sul nome per vedere il pokemon</p></div>
             <div class="col-6 lista-nomi">
                <h2>Nomi</h2>
+               
             </div>
             <div class="col-6 info">
              <h2>Statistiche</h2>
-            <img id="pokemon-img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png">
+            <img id="pokemon-img" src="">
             <p id="pokemon-type"></p>
             <p id="pokemon-desc"></p>
             </div>
